[gd_scene format=3 uid="uid://bfvlj3yf2tqkv"]

[ext_resource type="Script" uid="uid://dqewapbugn7mi" path="res://Scripts/Components/Weapons/ShieldComponent.gd" id="1_o1djp"]

[sub_resource type="BoxShape3D" id="BoxShape3D_o1djp"]
size = Vector3(2.2712402, 2.1240234, 0.34716797)

[node name="ShieldComponent" type="Node3D" unique_id=1978894718]
transform = Transform3D(1, 0, -2.0517388e-14, 0, 1, 0, -2.5285628e-14, -5.684342e-14, 1, 0, 0, 0)
script = ExtResource("1_o1djp")

[node name="ShieldMesh" type="MeshInstance3D" parent="." unique_id=194158034]

[node name="BlockBox" type="Area3D" parent="." unique_id=611679156]
unique_name_in_owner = true
collision_layer = 2
collision_mask = 104

[node name="CollisionShape3D" type="CollisionShape3D" parent="BlockBox" unique_id=1279477100]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.11621094, 0.14515018)
shape = SubResource("BoxShape3D_o1djp")

[node name="ShieldSheathPos" type="Node3D" parent="." unique_id=2015827018]

[node name="Cooldown" type="Timer" parent="." unique_id=1296709089]

[connection signal="area_entered" from="BlockBox" to="." method="_on_block_box_area_entered"]
[connection signal="timeout" from="Cooldown" to="." method="_on_cooldown_timeout"]
